IPv6 Prefix Delegation should not require an address from the DHCPv6 server during renewal with O flag present on RA
After commit 58287cbc , an issue somehow similar to #647 (closed) reemerges in NM 1.36.2:
Like issue #647 (closed), in my scenario, the concerned interface is configured with SLAAC. The router advertisement has the O flag set, but not the M flag, indicating that it does not offer addresses via DHCPv6, but other information like a DNS server and prefix delegation.
I have [main] dhcp=dhclient
set in the config file. When the interface is brought on, it will not retain the address provided by DHCPv6 server, (If there is no lease on the server side, the interface will get the DHCPv6-provided addresses initially, but these addresses will soon be retracted, leaving only SLAAC-provided addresses, and messages like dhclient[pid]: PRC: Address <DHCPv6-provided> depreferred
can be seen in the journal of NM; If there is already a corresponding lease on the server side, no DHCPv6-provided address will be required in the first place) but when the lease time has expired a half, dhclient will renew the lease, but this time the DHCPv6-provided addresses will not be retracted any more.
Steps to reproduce:
- (On the server, set the DHCPv6 lease time to a shorter value to ease the observation, e.g. 10min).
- Activate the connection with
nmcli con up <connection>
. - As stated above, NetworkManager will either not require the DHCPv6-provided addresses, or retract them shortly after the interface is brought up.
- After the lease time has expired a half, DHCPv6-provided addresses will appear on the interface, and never be retracted anymore this time.